# comp8610-assignment

./: README.md
HW1/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  mesh.hpp  rasterizer.cpp  rasterizer.hpp  task1.cpp  task3.cpp  task4.cpp
HW1/model/: Cottage.mtl
HW2/: Triangle.cpp  rasterizer.cpp  rasterizer.hpp  task1.cpp  task2.cpp  task3.cpp
HW2/models/: scene.mtl
HW3/src/: half_edge.cpp  mesh.cpp
HW4/: Renderer.cpp  Scene.cpp  Triangle.hpp
HW4/final_output_image/: binary_task1.ppm  binary_task3.ppm  binary_task4.ppm  binary_task5.ppm
HW5/: CMakeLists.txt  task1.cpp  task2_1.cpp  task2_2.cpp  task3.cpp  task4.cpp  task5_1.cpp  task5_2.cpp
HW5/include/: box.h  cloth.h  collider.h  mass.h  rasterizer.h  rope.h  spring.h  transforms.h
HW5/src/: cloth.cpp  rasterizer.cpp  rope.cpp  transforms.cpp
